--- a/plan.html
+++ b/plan.html
@@ -60,13 +60,13 @@
                 <li>2. Controlling Program Flow <i class="fa-regular fa-circle-check check"></i></li>
                 <li>3. Java Object-oriented Approach <i class="fa-regular fa-circle-check check"></i></li>
                 <li>4. Exception Handling <i class="fa-regular fa-circle-check check"></i></li>
-                <li>5. Working with Arrays and Collections<i class="fa-solid fa-person-running run"></i></li>
+                <li>5. Working with Arrays and Collections <i class="fa-solid fa-person-running run"></i></li>
                 <li>6. Working with Streams and Lambda expressions</li>
                 <li>7. Java Platform Module System</li>
                 <li>8. Concurrency</li>
-                <li>9. Java I/O API</li>
+                <li>9. Java I/O API <i class="fa-regular fa-circle-check check"></i></li>
                 <li>10. Secure Coding in Java SE Application</li>
-                <li>11. Database Applications with JDBC</li>
+                <li>11. Database Applications with JDBC <i class="fa-regular fa-circle-check check"></i></li>
                 <li>12. Localization</li>
                 <li>13. Annotations</li>
             </ul>
