--- a/academic.html
+++ b/academic.html
@@ -98,7 +98,7 @@
                     <th>普物實驗</th>
                     <th>基礎數物</th>
                     <th>普物甲</th>
-                    <th>額外修課</th>
+                    <th>OCE JWCD</th>
                     <th>GPA</th>
                 </tr>
                 <tr>
@@ -114,7 +114,7 @@
                     <td>B+</td>
                     <td>A+</td>
                     <td>A+</td>
-                    <td>OCE JWCD</td>
+                    <td>外修</td>
                     <td>3.90</td>
                 </tr>
             </table>
@@ -124,18 +124,18 @@
             <table class="score-table1">
                 <tr>
                     <th>科目</th>
-                    <th>none</th>
-                    <th>none</th>
-                    <th>none</th>
-                    <th>none</th>
-                    <th>none</th>
-                    <th>none</th>
-                    <th>none</th>
-                    <th>none</th>
-                    <th>none</th>
-                    <th>none</th>
-                    <th>none</th>
-                    <th>none</th>
+                    <th>英文三</th>
+                    <th>體育</th>
+                    <th>力學一</th>
+                    <th>熱物理學</th>
+                    <th>數學物理一</th>
+                    <th>實驗物理一</th>
+                    <th>生理心理學</th>
+                    <th>管理學</th>
+                    <th>亞裔文化</th>
+                    <th>OCPJP</th>
+                    <th>OCE JWCD</th>
+                    <th>Spring Framework</th>
                     <th>GPA</th>
                 </tr>
                 <tr>
@@ -149,9 +149,9 @@
                     <th>none</th>
                     <th>none</th>
                     <th>none</th>
-                    <th>none</th>
-                    <th>none</th>
-                    <th>none</th>
+                    <th>外修</th>
+                    <th>外修</th>
+                    <th>外修</th>
                     <td>none</td>
                 </tr>
             </table>
