--- a/plan.html
+++ b/plan.html
@@ -59,13 +59,13 @@
                 <li>1. Java Data Type <i class="fa-regular fa-circle-check check"></i></li>
                 <li>2. Controlling Program Flow <i class="fa-regular fa-circle-check check"></i></li>
                 <li>3. Java Object-oriented Approach <i class="fa-regular fa-circle-check check"></i></li>
-                <li>4. Exception Handling <i class="fa-regular fa-circle-check check"></i> 8/13 EX</li>
+                <li>4. Exception Handling <i class="fa-regular fa-circle-check check"></i> 8/12~8/13 EX</li>
                 <li>5. Working with Arrays and Collections <i class="fa-regular fa-circle-check check"></i></li>
-                <li>6. Working with Streams and Lambda expressions <i class="fa-solid fa-person-running run"></i> 8/20</li> 
+                <li>6. Working with Streams and Lambda expressions <i class="fa-solid fa-person-running run"></i> 8/17</li> 
                 <li>7. Java Platform Module System</li> 
-                <li>8. Concurrency <i class="fa-solid fa-person-running run"></i> 8/14~8/16</li> 
-                <li>9. Java I/O API <i class="fa-regular fa-circle-check check"></i> 8/21~8/22 EX</li> 
-                <li>10. Secure Coding in Java SE Application <i class="fa-solid fa-person-running run"></i> 8/17~8/19</li> 
+                <li>8. Concurrency <i class="fa-solid fa-person-running run"></i> 8/13~8/14</li> 
+                <li>9. Java I/O API <i class="fa-regular fa-circle-check check"></i> 8/18~8/19 EX</li> 
+                <li>10. Secure Coding in Java SE Application <i class="fa-solid fa-person-running run"></i> 8/14~8/16</li> 
                 <li>11. Database Applications with JDBC <i class="fa-regular fa-circle-check check"></i></li>
                 <li>12. Localization</li>
                 <li>13. Annotations</li>
