--- a/academic.html
+++ b/academic.html
@@ -64,6 +64,7 @@
                     <th>基礎數物</th>
                     <th>普物甲</th>
                     <th>物理辯論</th>
+                    <th>學分數</th>
                     <th>GPA</th>
                 </tr>
                 <tr>
@@ -80,6 +81,7 @@
                     <td>A+</td>
                     <td>A+</td>
                     <td>A</td>
+                    <td>24</td>
                     <td>4.05</td>
                 </tr>
             </table>
@@ -98,7 +100,8 @@
                     <th>普物實驗</th>
                     <th>基礎數物</th>
                     <th>普物甲</th>
-                    <th>OCE JWCD</th>
+                    <th>OCE</th>
+                    <th>學分數</th>
                     <th>GPA</th>
                 </tr>
                 <tr>
@@ -115,6 +118,7 @@
                     <td>A+</td>
                     <td>A+</td>
                     <td>外修</td>
+                    <td>21<span class="ext"> +6</span></td>
                     <td>3.90</td>
                 </tr>
             </table>
@@ -132,10 +136,11 @@
                     <th>實驗物理一</th>
                     <th>生理心理學</th>
                     <th>管理學</th>
-                    <th>亞裔文化</th>
+                    <th>亞裔文學</th>
                     <th>OCPJP</th>
-                    <th>OCE JWCD</th>
-                    <th>Spring Framework</th>
+                    <th class="orc">OCE/Spring</th>
+                    <th>前端工程師</th>
+                    <th>學分數</th>
                     <th>GPA</th>
                 </tr>
                 <tr>
@@ -151,7 +156,8 @@
                     <th>none</th>
                     <th>外修</th>
                     <th>外修</th>
-                    <th>外修</th>
+                    <th>企業實習</th>
+                    <td>21<span class="ext"> +12</span></td>
                     <td>none</td>
                 </tr>
             </table>
@@ -170,6 +176,7 @@
                     <th>none</th>
                     <th>none</th>
                     <th>none</th>
+                    <td>學分數</td>
                     <th>GPA</th>
                 </tr>
                 <tr>
@@ -186,6 +193,7 @@
                     <th>none</th>
                     <th>none</th>
                     <th>none</th>
+                    <td><span class="ext">+</span></td>
                     <td>none</td>
                 </tr>
             </table>
@@ -207,6 +215,7 @@
                     <th>none</th>
                     <th>none</th>
                     <th>none</th>
+                    <td>學分數</td>
                     <th>GPA</th>
                 </tr>
                 <tr>
@@ -223,6 +232,7 @@
                     <th>none</th>
                     <th>none</th>
                     <th>none</th>
+                    <td><span class="ext">+</span></td>
                     <td>none</td>
                 </tr>
             </table>
@@ -242,6 +252,7 @@
                     <th>none</th>
                     <th>none</th>
                     <th>none</th>
+                    <td>學分數</td>
                     <th>GPA</th>
                 </tr>
                 <tr>
@@ -258,6 +269,7 @@
                     <th>none</th>
                     <th>none</th>
                     <th>none</th>
+                    <td><span class="ext">+</span></td>
                     <td>none</td>
                 </tr>
             </table>
@@ -279,6 +291,7 @@
                     <th>none</th>
                     <th>none</th>
                     <th>none</th>
+                    <td>學分數</td>
                     <th>GPA</th>
                 </tr>
                 <tr>
@@ -295,6 +308,7 @@
                     <th>none</th>
                     <th>none</th>
                     <th>none</th>
+                    <td><span class="ext">+</span></td>
                     <td>none</td>
                 </tr>
             </table>
@@ -314,6 +328,7 @@
                     <th>none</th>
                     <th>none</th>
                     <th>none</th>
+                    <td>學分數</td>
                     <th>GPA</th>
                 </tr>
                 <tr>
@@ -330,6 +345,7 @@
                     <th>none</th>
                     <th>none</th>
                     <th>none</th>
+                    <td><span class="ext">+</span></td>
                     <td>none</td>
                 </tr>
             </table>
