--- a/plan.html
+++ b/plan.html
@@ -61,7 +61,7 @@
                 <li>3. Java Object-oriented Approach <i class="fa-regular fa-circle-check check"></i></li>
                 <li>4. Exception Handling <i class="fa-regular fa-circle-check check"></i></li>
                 <li>5. Working with Arrays and Collections <i class="fa-regular fa-circle-check check"></i></li>
-                <li>6. Working with Streams and Lambda expressions <i class="fa-solid fa-person-running run"></i> 8/17</li> 
+                <li>6. Working with Streams and Lambda expressions <i class="fa-regular fa-circle-check check"></i></li> 
                 <li>7. Java Platform Module System</li> 
                 <li>8. Concurrency <i class="fa-solid fa-person-running run"></i> 8/13~8/16</li> 
                 <li>9. Java I/O API <i class="fa-regular fa-circle-check check"></i> 8/18~8/19 EX</li> 
