--- a/index.html
+++ b/index.html
@@ -309,6 +309,31 @@
                 </div>
             </div>
         </div>
+        <div class="content animate__animated">
+            <div class="href">
+                <img src="images/db.png" alt="">
+                <a target="_blank" href="https://github.com/sc1314520/OCPJP_2022-07/tree/main/OCPJP/src/Basic/JDBC_2"><div class="content-img-text">
+                    <span class="content-img-text-1">前往頁面</span>
+                </div></a>
+            </div>
+            <div class="introduction">
+                <div class="intro-text">
+                    <h1>作品五：JDBC 資料庫串連與應用</h1>
+                    <p>利用 Java 與 MySQL 概念進行實作與統整。</p>
+                </div>
+                <div class="intro-text-2">
+                    基本技巧：Java / SQL<br/>
+                    程式運用：Eclipse/MySQL/MySQL Workbench <br>
+                    實作主題：使用者登入系統 / 簡易金流交易系統 <br>
+                </div>
+                <div class="intro-text-3">
+                    製作時間：2022.08.18。
+                </div>
+                <div class="intro-text-4">
+                    作品傳送門：<a target="_blank" href="https://github.com/sc1314520/OCPJP_2022-07/tree/main/OCPJP/src/Basic/JDBC_2">點擊連結</a>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="more-info">
         <span class="more"><a class="more-a" target="_blank" href="https://drive.google.com/file/d/1CmOZhbUqwPg5Y9loH4RRUEsGyxQBce3f/view?usp=sharing">觀看更多 --></a></span>
