--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@
                     基本技巧：Java / SQL<br/>
                     程式運用：Eclipse/MySQL/MySQL Workbench <br>
                     實作主題：使用者登入系統 / 簡易金流交易系統 <br>
+                    專案特色：利用文件配置的方式設計通用模版運用 <br>
                 </div>
                 <div class="intro-text-3">
                     製作時間：2022.08.18。
