--- a/plan.html
+++ b/plan.html
@@ -64,7 +64,7 @@
                 <li>6. Working with Streams and Lambda expressions <i class="fa-regular fa-circle-check check"></i></li> 
                 <li>7. Java Platform Module System</li> 
                 <li>8. Concurrency <i class="fa-regular fa-circle-check check"></i></li> 
-                <li>9. Java I/O API <i class="fa-regular fa-circle-check check"></i> 8/18~8/19 EX</li> 
+                <li>9. Java I/O API <i class="fa-regular fa-circle-check check"></i> </li> 
                 <li>10. Secure Coding in Java SE Application </li> <i class="fa-regular fa-circle-check check"></i>
                 <li>11. Database Applications with JDBC <i class="fa-regular fa-circle-check check"></i></li>
                 <li>12. Localization</li> <i class="fa-regular fa-circle-check check"></i>
