--- a/plan.html
+++ b/plan.html
@@ -65,10 +65,10 @@
                 <li>7. Java Platform Module System</li> 
                 <li>8. Concurrency <i class="fa-regular fa-circle-check check"></i></li> 
                 <li>9. Java I/O API <i class="fa-regular fa-circle-check check"></i> </li> 
-                <li>10. Secure Coding in Java SE Application </li> <i class="fa-regular fa-circle-check check"></i>
+                <li>10. Secure Coding in Java SE Application  <i class="fa-regular fa-circle-check check"></i></li>
                 <li>11. Database Applications with JDBC <i class="fa-regular fa-circle-check check"></i></li>
-                <li>12. Localization</li> <i class="fa-regular fa-circle-check check"></i>
-                <li>13. Annotations</li> <i class="fa-regular fa-circle-check check"></i>
+                <li>12. Localization <i class="fa-regular fa-circle-check check"></i></li> 
+                <li>13. Annotations <i class="fa-regular fa-circle-check check"></i></li> 
                 <li>14. Previous Exams <i class="fa-solid fa-person-running run"></i> 8/10~8/28</li>
             </ul>
         </div>
