--- a/plan.html
+++ b/plan.html
@@ -62,7 +62,7 @@
                 <li>4. Exception Handling <i class="fa-regular fa-circle-check check"></i></li>
                 <li>5. Working with Arrays and Collections <i class="fa-regular fa-circle-check check"></i></li>
                 <li>6. Working with Streams and Lambda expressions <i class="fa-regular fa-circle-check check"></i></li> 
-                <li>7. Java Platform Module System</li> 
+                <li>7. Java Platform Module System <i class="fa-regular fa-circle-check check"></i></li> 
                 <li>8. Concurrency <i class="fa-regular fa-circle-check check"></i></li> 
                 <li>9. Java I/O API <i class="fa-regular fa-circle-check check"></i> </li> 
                 <li>10. Secure Coding in Java SE Application  <i class="fa-regular fa-circle-check check"></i></li>
