--- a/plan.html
+++ b/plan.html
@@ -69,7 +69,7 @@
                 <li>11. Database Applications with JDBC <i class="fa-regular fa-circle-check check"></i></li>
                 <li>12. Localization <i class="fa-regular fa-circle-check check"></i></li> 
                 <li>13. Annotations <i class="fa-regular fa-circle-check check"></i></li> 
-                <li>14. Previous Exams <i class="fa-solid fa-person-running run"></i> 8/10~8/28</li>
+                <li>14. Previous Exams <i class="fa-regular fa-circle-check check"></i></li>
             </ul>
         </div>
     </div>
