--- a/plan.html
+++ b/plan.html
@@ -44,7 +44,7 @@
         </div>
     </div>
     <div class="home">
-        <img src="images/IMG_2834.JPG" alt="">
+        <img src="images/IMG_3413.jpg" alt="">
         <div class="home-text animate__animated">
             <h1>Lemon LIN</h1>
             <p>Major in Physics in National Taiwan Normal University</p>
