--- a/plan.html
+++ b/plan.html
@@ -52,7 +52,7 @@
     </div>
    
     <div class='timetaco-list taco' data-timetacoid='junjku' style="margin-top:3px;"></div>
-    <div class="ocp">
+    <div class="ocp" style="display:none">
         <div class="ocp-list">
             <h1>OCPJP Todo-List</h1>
             <ul>
