--- a/plan.html
+++ b/plan.html
@@ -49,6 +49,10 @@
             <h1>Lemon LIN</h1>
             <p>Major in Physics in National Taiwan Normal University</p>
         </div>
+        <div class="home-text2 animate__animated">
+            <h1>Miaomi</h1>
+            <p>Major in English Program, Dept. of Applied Foreign Languages in TCHCVS</p>
+        </div>
     </div>
    
     <div class='timetaco-list taco' data-timetacoid='junjku' style="margin-top:3px;"></div>
