--- a/index.html
+++ b/index.html
@@ -132,6 +132,33 @@
         <p>See more about these on my <a href="https://github.com/SC1314520">GitHub</a></p>
         <div class="content animate__animated">
             <div class="href">
+                <img src="images/cert.png" alt="">
+                <a target="_blank" href="https://catalog-education.oracle.com/pls/certview/sharebadge?id=9230CD0C820DD47EF3D54217A6A4EDD5609AC36B30F76316D878FD0E91CA71E6&fbclid=IwAR0vr51vKVbulH1HprnKIG7xrz-rMNyhIuLSowPSK3xYacO_Rh_-6NJhWd4"><div class="content-img-text">
+                    <span class="content-img-text-1">前往頁面</span>
+                </div></a>
+            </div>
+            <div class="introduction">
+                <div class="intro-text">
+                    <h1>Oracle Certified Professional Java SE 11 Developer</h1>
+                    <p>後端程式語言學習過程中第一張專業級國際認證證照</p>
+                </div>
+                <div class="intro-text-2">
+                    基本技巧：Java SE 11<br/>
+                    程式運用：Eclipse<br>
+                    認證單位：Oracle、Pearson VUE<br/>
+                    測驗成績：87% (通過標準：68%)<br/>
+                </div>
+                <div class="intro-text-3">
+                    取得時間：2022.09.03
+                </div>
+                <div class="intro-text-4">
+                    詳細傳送門：<a target="_blank" href="https://catalog-education.oracle.com/pls/certview/sharebadge?id=9230CD0C820DD47EF3D54217A6A4EDD5609AC36B30F76316D878FD0E91CA71E6&fbclid=IwAR0vr51vKVbulH1HprnKIG7xrz-rMNyhIuLSowPSK3xYacO_Rh_-6NJhWd4">點擊連結</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="content animate__animated">
+            <div class="href">
                 <img src="images/html:css.png" alt="">
                 <a target="_blank" href="https://sc1314520.github.io/SCJ.github.io/"><div class="content-img-text">
                     <span class="content-img-text-1">前往頁面</span>
