--- a/plan.html
+++ b/plan.html
@@ -77,6 +77,20 @@
             </ul>
         </div>
     </div>
+    <div class="pv-all">
+        <h1>ORACLE Certified Record</h1>
+        <div class="pv">
+        <div class="pv-content">
+            <img src="images/OCA.PNG" width="300px" height="300px" alt="">
+        </div>
+        <div class="pv-content">
+            <img src="images/OCP.PNG" width="300px" height="300px" alt="">
+        </div>
+        <div class="pv-content">
+            <img  src="images/se11.png" height="300px" alt="">
+        </div>
+    </div>
+    </div>
     <div class="main">
         <span class="date">建立：2022.07.23</span>
         <h1>Plan for My dream</h1>
@@ -108,29 +122,30 @@
                     <h4>2022.07.24~2022.07.30</h4>
                 </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
-                <div class="session-box">
-                    <h2>DOM/AJAX</h2>
-                    <h4>2022.09.04~2022.09.10</h4>
-                </div>
-                <i class="fa-solid fa-arrow-down ic-row"></i>
-                <div class="session-box">
-                    <h2>JavaScript延伸與複習</h2>
-                    <h4>2022.09.11~2022.09.30</h4>
-                </div>
-                <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box fc-box">
                     <h2>前端工程師企業實習（一）</h2>
                     <h4>2022.11.01~2023.05.01</h4>
                 </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box">
+                    <h2>DOM/AJAX</h2>
+                    <h4></h4>
+                </div>
+                <i class="fa-solid fa-arrow-down ic-row"></i>
+                <div class="session-box">
+                    <h2>JavaScript延伸與複習</h2>
+                    <h4></h4>
+                </div>
+                <i class="fa-solid fa-arrow-down ic-row"></i>
+
+                <div class="session-box">
                     <h2>BootStrap</h2>
-                    <h4>2023.01.21~2023.02.20</h4>
+                    <h4></h4>
                 </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box">
                     <h2>排版作品集</h2>
-                    <h4>2023.07.01~2023.08.31</h4>
+                    <h4></h4>
                 </div>
             </div>
             <div class="bed">
@@ -155,18 +170,8 @@
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                     <div class="session-box fc-box">
                         <h2> Java OCPJP SE 11 國證</h2>
-                        <h4>2022.09.03</h4>
+                        <h4>2022.09.03 <i class="fa-regular fa-circle-check check "></i></h4>
                     </div>
-                <i class="fa-solid fa-arrow-down ic-row"></i>
-                <div class="session-box">
-                    <h2>Java OCE JWCD （一）</h2>
-                    <h4>2022.08.14~2022.10.09</h4>
-                </div>
-                <i class="fa-solid fa-arrow-down ic-row"></i>
-                <div class="session-box">
-                    <h2>Java Spring （一）</h2>
-                    <h4>2022.10.23~2022.12.25</h4>
-                </div>
                 <i class="fa-solid fa-arrow-down ic-row"></i>
                 <div class="session-box fc2-box">
                     <h2>Leet Code 每日一題</h2>
