--- a/process.html
+++ b/process.html
@@ -166,9 +166,7 @@
         <div class="feedback">
             <div class="feed-img"><img src="images/person.png" alt=""></div>
             <div class="feed-text">
-                <p> 對我來說我覺得是一個學習的典範，因為看到SC每天寫題目，數量還不少~我才跟著努力
-                    的。我自認為我很努力了，結果看到一個更努力的人，因此想超越，也才發現自己的努力更
-                    本不算什麼。而且我覺得學物理觀念正確很重要，而SC就分享的很清楚，感覺找到了一個好老師。
+                <p> 從國中開始到現在默默的支持你很久了，一直覺得你很厲害，也讓我有動力去做一些很特別的事情，能夠當你的粉絲真的很幸運也很幸福，希望你未來可以順利完成你的夢想，也希望有一天能夠去台北找你☺️未來也會一直在你背後替你加油的💪小小的期待下次開直播再穿恐龍裝😂
                   </p>
             </div>
         </div>
