--- a/academic.html
+++ b/academic.html
@@ -128,17 +128,17 @@
             <table class="score-table1">
                 <tr>
                     <th>科目</th>
-                    <th>英文三</th>
                     <th>體育</th>
                     <th>力學一</th>
                     <th>熱物理學</th>
                     <th>數學物理一</th>
                     <th>實驗物理一</th>
                     <th>生理心理學</th>
-                    <th>管理學</th>
+                    <th>電子學</th>
                     <th>亞裔文學</th>
                     <th>OCPJP</th>
-                    <th class="orc">OCE/Spring</th>
+                    <th>OCE</th>
+                    <th>Spring</th>
                     <th>前端工程師</th>
                     <th>學分數</th>
                     <th>GPA</th>
@@ -153,11 +153,11 @@
                     <th>none</th>
                     <th>none</th>
                     <th>none</th>
-                    <th>none</th>
+                    <th>外修</th>
                     <th>外修</th>
                     <th>外修</th>
                     <th>企業實習</th>
-                    <td>21<span class="ext"> +12</span></td>
+                    <td>20<span class="ext"> +12</span></td>
                     <td>none</td>
                 </tr>
             </table>
