--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div class="img-text">OCPJP 程式設計師</div>
                 </li>
                 <li><img src="images/fans.png" alt="">
-                    <div class="img-text">十萬粉絲帳號共同創辦人</div>
+                    <div class="img-text">十萬粉絲社群帳號創辦人</div>
                 </li>
             </ul>
         </div>
