--- a/index.html
+++ b/index.html
@@ -38,6 +38,19 @@
         </div>
     </div>
     <div class="about">
+        <div class="ocp-open">
+            <img src="images/cert.png" alt="">
+            <button class="close-button">close</button>
+        </div>
+        <div class="fans-open">
+            <div class="fans-hide" id="fans-hide">
+                <input type="password" class="fans-pw" id="password" name="password" placeholder="請輸入密碼">
+                <button class="verify-button" onclick="VS();" placeholder="請輸入驗證碼">verify</button>
+            </div>
+            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FAnimeJSAS%2F&tabs=timeline&width=800&height=300&small_header=true&adapt_container_width=false&hide_cover=false&show_facepile=true&appId" width="800" height="300" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+            
+            <button class="close-button2">close</button>
+        </div>
         <h1 class="animate__animated">About ME</h1>
         <p>Pursue my ideals and face our own life with enthusiasm.</p>
         <div class="about-block">
@@ -51,10 +64,10 @@
                 <li><img src="images/UI-UX.png" alt="">
                     <div class="img-text">前端企業實習生</div>
                 </li>
-                <li><img src="images/back-end.png" alt="">
+                <li class="ocpjp-click"><img src="images/back-end.png" alt="點擊查看詳細">
                     <div class="img-text">OCPJP 程式設計師</div>
                 </li>
-                <li><img src="images/fans.png" alt="">
+                <li class="fans-click"><img src="images/fans.png" alt="">
                     <div class="img-text">十萬粉絲社群帳號創辦人</div>
                 </li>
             </ul>
