--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
         </div>
     </div>
     <div class="about">
+        <div class="ntnu-open">
+            <img src="images/sophomore-vs.png" alt="">
+            <button class="close-button3">close</button>
+        </div>
         <div class="ocp-open">
             <img src="images/cert.png" alt="">
             <button class="close-button">close</button>
@@ -57,10 +61,10 @@
         <p>Pursue my ideals and face our own life with enthusiasm.</p>
         <div class="about-block">
             <ul>
-                <li><img src="images/education.png" alt="">
+                <li ><img src="images/education.png" alt="">
                     <div class="img-text">特殊績優師培生</div>
                 </li>
-                <li><img src="images/physics.png" alt="">
+                <li class="ntnu-click"><img src="images/physics.png" alt="">
                     <div class="img-text">物理學系在校生</div>
                 </li>
                 <li><img src="images/UI-UX.png" alt="">
