--- a/index.html
+++ b/index.html
@@ -39,7 +39,85 @@
     </div>
     <div class="about">
         <!-- ex -->
-        
+        <div class="edu-open">
+            <div class="username" id="username">
+                <span class="us-first">使用者：</span>
+                <span class="us-second" id="us-second"></span>
+            </div>
+            <div class="edu-hide" id="edu-hide">
+                <div class="ip" id="ip">
+                    <h1>身份驗證機制</h1>
+                    <input type="text" name="user" id="user" placeholder="請輸入權限名稱"><br>
+                    <input type="text" name="user-pw" id="user-pw" placeholder="請輸入通行密碼"><br>
+                </div>
+            </div>
+            <h1>學術資源區</h1>
+            <div class="edu-block-all">
+                <div class="edu-block">
+                    <h2>高一專區</h2>
+                        <ul>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1jD5JT_NJ7Vr2262rr9BgFYpsIIBBSATZ/view?usp=sharing">ch01 科學的態度與方法</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1_8y3qGyRSf3TjnPdTkpW7CeuXCg0svVp/view?usp=sharing">ch02 物體的運動</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/12fXukpu4l6jWwPPzTjFmq5ooVs8SJN2D/view?usp=sharing">ch03 物質組成與作用</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1mmROKCKQNPRmFXV3YYF5yVjKXBNcMv2m/view?usp=sharing">ch04 電與磁的統一</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1fNB69ipPKfLQnmRiWIAGJbWeYzBp2x9r/view?usp=sharing">ch05 能量</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/12pAy7ObPffczjDJ5hw41VLlCzbohMn1D/view?usp=sharing">ch06 量子現象</a></li>
+                        </ul>
+                </div>
+                <div class="edu-block">
+                    <h2>選修物理一</h2>
+                        <ul>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/16LKFfg1ToFGfPOV-uyWtutLT4cwo_Lsz/view?usp=sharing">ch01 測量與不確定度</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/120mz_dqR5o1if45PbSTK4_RYNw7E9YcP/view?usp=sharing">ch02 直線運動</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1_7R6SX3prqqElY-knVj_Sl3czdfHp2gn/view?usp=sharing">ch03 平面運動</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/192jqetSS4K7A9IbuWn8j8aUicAAYRGu4/view?usp=sharing">ch04 牛頓運動定律</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1QXSj0crRcLscA9GvpxsBmcLkqmOidXfR/view?usp=sharing">ch05 週期運動</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1UTIHX5pII9PxRMPsG8_KJU0p2ZjilQ_l/view?usp=sharing">ch06 萬有引力</a></li>
+                        </ul>
+                </div>
+                <div class="edu-block">
+                    <h2>選修物理二</h2>
+                        <ul>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1LVqfvMW96lJ9h1VWHxgj5UUgznWa0ss4/view?usp=sharing">ch01 動量與角動量</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1GFtQh_wCKyz7QllhAsfyEnjDYUy8glO4/view?usp=sharing">ch02 功與能量</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1X2mTfDHTQDUMgmDXiB9IzLU8ZQ4VC1B_/view?usp=sharing">ch03 牛頓運動定律應用</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1E0yPrKgytrXCyuXh0xke5W-02U43kxna/view?usp=sharing">ch04 熱學</a></li>
+                        </ul>
+                </div>
+                <div class="edu-block">
+                    <h2>選修物理三</h2>
+                        <ul>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/12XfKfpX5oZ58BkkUcN9sMbPokE4laws9/view?usp=sharing">ch01 波動</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1F-a4UALrwwvPFgjMzsXBnEn3WerZq-dh/view?usp=sharing">ch02 聲波</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1zttiR_ciX7zLGLYng2MSm1MvQ0OyIvRd/view?usp=sharing">ch03 幾何光學</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1Bo1ScOLAsXt8GVOYkfk-uLweffeHdDfP/view?usp=sharing">ch04 物理光學</a></li>
+                        </ul>
+                </div>
+                <div class="edu-block">
+                    <h2>選修物理四</h2>
+                        <ul>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1A-vxPTGYCTCReKaX7nHbgOUWOE-f2fbB/view?usp=sharing">ch01 靜電學</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1yU6e8MP3ssM4pVOJhr3q9_ArhehQH2Li/view?usp=sharing">ch02 電流的磁效應</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1a5FOTSUPnYef7hEFjaKwZZZMaLCgWVVB/view?usp=sharing">ch03 電磁感應</a></li>
+                        </ul>
+                </div>
+                <div class="edu-block">
+                    <h2>選修物理五</h2>
+                        <ul>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/10MpisduOfK1XVhMQYpqeRw2aYdOm8D7s/view?usp=sharing">ch01 電路學</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1sRJgP_jWZnUxzRF8XOlpl4g_J_ogcR45/view?usp=sharing">ch02 量子現象</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1soH7CPqG2OvxdIHbiTtyiJHD9u0F_Zej/view?usp=sharing">ch03 原子結構</a></li>
+                        </ul>
+                </div>
+             </div>
+             <h1>影音教學區</h1>
+             <div class="teach-video">
+
+             </div>
+            <button id="edu-v" class="verify-button2" onclick="EDU();">verify</button>
+            <button class="close-button4">close</button>
+        </div>
+
         <div class="ntnu-open">
             <img src="images/sophomore-vs.png" alt="">
             <button class="close-button3">close</button>
@@ -69,7 +147,7 @@
         <p>Pursue my ideals and face our own life with enthusiasm.</p>
         <div class="about-block">
             <ul>
-                <li><img src="images/education.png" alt="">
+                <li class="edu-click"><img src="images/education.png" alt="">
                     <div class="img-text">特殊績優師培生</div>
                 </li>
                 <li class="ntnu-click"><img src="images/physics.png" alt="">
