--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="forgot" id="forgot">
                     <h1>找回密碼</h1>
                     <input type="text" name="forgot-account" id="forgot-account" placeholder="請輸入找回帳號"><br>
-                    <input type="password" name="forgot-pass" id="forgot-pass" placeholder="找回帳號授權碼"><br>
+                    <input type="password" name="forgot-pass" id="forgot-pass" placeholder="請輸入電子信箱"><br>
                     <button class="forgot-1" onclick="forgot();">送出</button>
                     <button class="forgot-2" id="forgot-2">關閉</button>
                 </div>
