--- a/index.html
+++ b/index.html
@@ -119,6 +119,44 @@
                             <li><a target="_blank" href="https://drive.google.com/file/d/1soH7CPqG2OvxdIHbiTtyiJHD9u0F_Zej/view?usp=sharing">ch03 原子結構</a></li>
                         </ul>
                 </div>
+                <div class="edu-block">
+                    <h2>學測複習講義一</h2>
+                        <ul>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1SJJK577a-djGnxLqz5TOgZcRpRVq2oMQ/view?usp=sharing">英文複習講義</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1I6hvQePVY6oLm7--IAzn5Y0gNrUnnrp8/view?usp=sharing">數A複習講義</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1n_Jod4Lvs2n6LPINUYZQS_mMaKu47W5E/view?usp=sharing">數B複習講義</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1LtS7z_pVxLgz5YtXioB4TKcvIrR6fSmD/view?usp=sharing">地理複習講義</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1XrSSmQ_kdprQbFTMHtsQSYOgpsKk5V1G/view?usp=sharing">歷史複習講義</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1rYuB_wOXnz-59don0h5iZO5mkNp2Q20l/view?usp=sharing">公民複習講義</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1ds-ih05Hq14gHzHwxYx3oX78myEXO3sF/view?usp=sharing">物理複習講義</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1ux8pjw2Rf_1HTKhhxuksug1_3dNc1zyf/view?usp=sharing">化學複習講義</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1Ql2gCOdReHTXmIBrkz88lb0T0eM28j9C/view?usp=sharing">生物複習講義</a></li>
+                        </ul>
+                </div>
+                <div class="edu-block">
+                    <h2>學測複習講義二</h2>
+                    <ul>
+                        <li><a target="_blank" href="https://drive.google.com/file/d/1IqjJcmLGrnfp0QwaKk-mjOVo4EJJX77R/view?usp=sharing">數A複習講義</a></li>
+                        <li><a target="_blank" href="https://drive.google.com/file/d/1813BD0CfbJmctydZQ5zOI1OTu0ltpkw0/view?usp=sharing">物理複習講義</a></li>
+                        <li><a target="_blank" href="https://drive.google.com/file/d/14ZpAgFXnIuFXLoijpm6-J28YhzjX2b77/view?usp=sharing">化學複習講義</a></li>
+                        <li><a target="_blank" href="https://drive.google.com/file/d/13TQFjMb6bn-1_VnZz2NOcs6q1KzVEFCu/view?usp=sharing">生物複習講義</a></li>
+                        <li><a target="_blank" href="https://drive.google.com/file/d/1bFdV6BuGM27aK0RqFNOgkCgEHNJzTnvn/view?usp=sharing">地科複習講義</a></li>
+                        <li><a target="_blank" href="https://drive.google.com/file/d/1eufcAZ8Rb0zltL5_f-kqwlop7NHMVGul/view?usp=sharing">歷史複習講義</a></li>
+                        <li><a target="_blank" href="https://drive.google.com/file/d/1ZDYB8woQc9d32sIPtkxUFwRAD0QYYZuS/view?usp=sharing">地理上複習講義</a></li>
+                        <li><a target="_blank" href="https://drive.google.com/file/d/1UOunPfMShxjauaBRe1jqdRsf1YWCzqaE/view?usp=sharing">地理中複習講義</a></li>
+                        <li><a target="_blank" href="https://drive.google.com/file/d/1hd82sksK4coVWTcMqKDjjTQ84eJB4M96/view?usp=sharing">地理下複習講義</a></li>
+                        <li><a target="_blank" href="https://drive.google.com/file/d/1VAqVvoUdCxL8TSML-9C-06UTGY7adn1X/view?usp=sharing">公民複習講義</a></li>
+                    </ul>
+                </div>
+                <div class="edu-block">
+                    <h2>超素養閱讀</h2>
+                        <ul>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1UALY_6zte2sAJtRNy-PqhPAdVWu9lh-k/view?usp=sharing">物理閱讀與探究</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1XF3DpdDoSwXiGZInXRAh0Y2C3tnrD-1q/view?usp=sharing">化學閱讀與探究</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/12s8zgT95hWsjhNUelRAc4iH3Dzs0d8jM/view?usp=sharing">生物閱讀與探究</a></li>
+                            <li><a target="_blank" href="https://drive.google.com/file/d/1sjOhRea4PvJ2DR8qTuRAXt8Oj4fsOupM/view?usp=sharing">地科閱讀與探究</a></li>
+                        </ul>
+                </div>
              </div>
              <h1>影音教學區</h1>
              <div class="teach-video">
